feat(Skill): support using skill.yml to specify the cooldown and some factor of the skill
- skill's cooldown time can now be set dynamically
- also add some factor that can control how the skill will behave